# multi-agent-orchestrator

./: .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .lycheeignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.md(chinese).ini  jest.config.js  package-lock.json  package.json
python/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  reame.md  ruff.toml  setup.cfg  setup.py  test_requirements.txt
python/src/: app.py  orchestrator.py
python/src/agent_squad/: __init__.py  agent_overlap_analyzer.py  orchestrator.py
python/src/agent_squad/agents/: __init__.py  agent.py  amazon_bedrock_agent.py  anthropic_agent.py  bedrock_flows_agent.py  bedrock_inline_agent.py  bedrock_llm_agent.py  bedrock_translator_agent.py  chain_agent.py  comprehend_filter_agent.py  lambda_agent.py  lex_bot_agent.py  ollama_agent.py  openai_agent.py  strands_agent.py  supervisor_agent.py
python/src/agent_squad/classifiers/: __init__.py  anthropic_classifier.py  bedrock_classifier.py  classifier.py  ollama_classifier.py  openai_classifier.py
python/src/agent_squad/retrievers/: __init__.py  amazon_kb_retriever.py  chroma_retriever.py  retriever.py
python/src/agent_squad/shared/: user_agent.py  version.py
python/src/agent_squad/storage/: chat_storage.py  dynamodb_chat_storage.py  in_memory_chat_storage.py  sql_chat_storage.py
python/src/agent_squad/types/: __init__.py  types.py
python/src/agent_squad/utils/: __init__.py  helpers.py  logger.py  tool.py
python/src/agents/: __init__.py  agent.py  amazon_bedrock_agent.py  bedrock_llm_agent.py  lambda_agent.py  lex_bot_agent.py
python/src/classifiers/: __init__.py  anthropic_classifier.py  bedrock_classifier.py  classifier.py
python/src/multi_agent_orchestrator/: orchestrator.py
python/src/multi_agent_orchestrator/agents/: __init__.py  agent.py  amazon_bedrock_agent.py  anthropic_agent.py  bedrock_flows_agent.py  bedrock_inline_agent.py  bedrock_llm_agent.py  bedrock_translator_agent.py  chain_agent.py  comprehend_filter_agent.py  lambda_agent.py  letta_agent.py  lex_bot_agent.py  math_agent.py  openai_agent.py  parallel_agent.py  salesforce_agentforce_agent.py  supervisor_agent.py
python/src/multi_agent_orchestrator/classifiers/: __init__.py  anthropic_classifier.py  bedrock_classifier.py  classifier.py  openai_classifier.py
python/src/multi_agent_orchestrator/retrievers/: amazon_kb_retriever.py  retriever.py
python/src/storage/: __init__.py  chat_storage.py  dynamodb_chat_storage.py  in_memory_chat_storage.py
python/src/tests/: test_agent_overlap_analyzer.py  test_orchestrator.py
python/src/types/: __init__.py  types.py
python/src/utils/: __init__.py  helpers.py  logger.py
(+488 files in other folders)
