[metadata]
name = multi_agent_orchestrator
version = 0.0.8
author = Anthony Bernabeu, Corneliu Croitoru
author_email = brnaba@amazon.com, ccroito@amazon.com
description = Multi-agent orchestrator framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
url = https://github.com/awslabs/multi-agent-orchestrator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    boto3==1.34.151
    anthropic==0.32.0

[options.packages.find]
where = src
exclude =
    tests*